public/styles/styles.css
body {
    /*background: url(https://photos-2.dropbox.com/t/2/AADR6qZx_L0CcuWxqcBoP1aczNWuUPONTfqfw5PZux2KdQ/12/537224311/jpeg/32x32/1/_/1/2/the_seer_by_sicilianvalkyrie.jpg/ENzj4rAEGI8DIAIoAg/Qo8ZbQv5QkruUVOpiGhfqZyTeqbyCzpYeqaHmaqGcPo?size=1024x768&size_mode=3) center no-repeat;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    background-position: top;
    color: white;*/
}
.content {

}
.caret {
    margin-bottom: 20px; 
    margin-top: 1px;
}
.caret-left {
    display: inline-block;
    margin-right: 6px;
    border-right: 6px dashed;
    vertical-align: middle;
    border-top: 6px solid transparent;
    border-left: 2px solid transparent;
    border-bottom: 6px solid transparent
    
}
.caret-right {
    display: inline-block;
    margin-left: 6px;
    border-left: 6px dashed;
    vertical-align: middle;
    border-bottom: 6px solid transparent;
    border-right: 2px solid transparent;
    border-top: 6px solid transparent;
}
#navbar {
    width: 1200px;
}
.navbar-inverse {
    margin-bottom: 0px
}
.artist-logo img{
    width: 85px;
    height: 64px;
    position: absolute;
    top: 0px;
    left: 4px;
    padding: 3px;
    padding-top: 0px;
}

@media (max-width: 800px) {}
.form-control {
    width: 220px;
}
h2 {
    line-height: 2px;
}
.artist-name {
    font-size: 28px;
}

